// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportStatistics/LicenseStatistics/LicenseColumn render snap LicenseColumn empty 1`] = `
<body>
  <div>
    <div
      autofit="true"
      columnbackground="{\\"style\\":{\\"fill\\":\\"#F7F6F4\\",\\"fillOpacity\\":1}}"
      columnstyle="{\\"radius\\":4,\\"fill\\":\\"#6094FC\\",\\"strokeOpacity\\":0}"
      data="[{\\"type\\":\\"User\\",\\"value\\":0,\\"desc\\":\\"desc1\\",\\"limit\\":0}]"
      interactions="[{\\"type\\":\\"element-highlight\\"}]"
      state="{\\"active\\":{\\"style\\":{\\"lineWidth\\":0,\\"fill\\":\\"#6094FC\\"}},\\"inactive\\":{\\"style\\":{\\"lineWidth\\":0,\\"fill\\":\\"#ebeae7\\",\\"opacity\\":1}}}"
      theme="light"
      tooltip="{\\"showMarkers\\":false,\\"fields\\":[\\"type\\",\\"value\\"],\\"domStyles\\":{\\"g2-tooltip\\":{\\"width\\":\\"190px\\",\\"height\\":\\"auto\\",\\"borderRadius\\":\\"8px\\",\\"background\\":\\"#fcfbf9\\",\\"border\\":\\"1px solid #ebe9e8\\",\\"boxShadow\\":\\"0 3px 12px 0 #332c1f1a\\",\\"padding\\":\\"0 12px\\"}}}"
      xaxis="{\\"animate\\":false,\\"line\\":null,\\"label\\":{\\"autoEllipsis\\":true,\\"autoHide\\":false,\\"style\\":{\\"fill\\":\\"#8a8f99\\",\\"fontSize\\":12,\\"fontWeight\\":400,\\"lineHeight\\":20,\\"width\\":80,\\"textAlign\\":\\"center\\",\\"textBaseline\\":\\"middle\\"}}}"
      xfield="type"
      yaxis="{\\"animate\\":false,\\"line\\":null,\\"grid\\":null,\\"label\\":null}"
      yfield="value"
    />
  </div>
</body>
`;

exports[`ReportStatistics/LicenseStatistics/LicenseColumn render snap LicenseColumn empty 2`] = `
<body>
  <div>
    <div
      autofit="true"
      columnbackground="{\\"style\\":{\\"fill\\":\\"#F7F6F4\\",\\"fillOpacity\\":1}}"
      columnstyle="{\\"radius\\":4,\\"fill\\":\\"#6094FC\\",\\"strokeOpacity\\":0}"
      data="[{\\"type\\":\\"name1\\",\\"value\\":1,\\"desc\\":\\"desc1\\",\\"limit\\":1},{\\"type\\":\\"name2\\",\\"value\\":10,\\"desc\\":\\"desc2\\",\\"limit\\":10}]"
      interactions="[{\\"type\\":\\"element-highlight\\"}]"
      state="{\\"active\\":{\\"style\\":{\\"lineWidth\\":0,\\"fill\\":\\"#6094FC\\"}},\\"inactive\\":{\\"style\\":{\\"lineWidth\\":0,\\"fill\\":\\"#ebeae7\\",\\"opacity\\":1}}}"
      theme="light"
      tooltip="{\\"showMarkers\\":false,\\"fields\\":[\\"type\\",\\"value\\"],\\"domStyles\\":{\\"g2-tooltip\\":{\\"width\\":\\"190px\\",\\"height\\":\\"auto\\",\\"borderRadius\\":\\"8px\\",\\"background\\":\\"#fcfbf9\\",\\"border\\":\\"1px solid #ebe9e8\\",\\"boxShadow\\":\\"0 3px 12px 0 #332c1f1a\\",\\"padding\\":\\"0 12px\\"}}}"
      xaxis="{\\"animate\\":false,\\"line\\":null,\\"label\\":{\\"autoEllipsis\\":true,\\"autoHide\\":false,\\"style\\":{\\"fill\\":\\"#8a8f99\\",\\"fontSize\\":12,\\"fontWeight\\":400,\\"lineHeight\\":20,\\"width\\":80,\\"textAlign\\":\\"center\\",\\"textBaseline\\":\\"middle\\"}}}"
      xfield="type"
      yaxis="{\\"animate\\":false,\\"line\\":null,\\"grid\\":null,\\"label\\":null}"
      yfield="value"
    />
  </div>
</body>
`;
